--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Testercpp/Testercpp.vcxproj.filters
+/Testercpp/Testercpp.vcxproj
+/Testercpp/Testercpp.sln
+/Testercpp/Testercpp.cpp
+/Testercpp/targetver.h
+/Testercpp/stdafx.h
+/Testercpp/stdafx.cpp
